[gd_scene load_steps=4 format=2]

[ext_resource path="res://Data/Sprites/Dice/dieWhite1.png" type="Texture" id=1]
[ext_resource path="res://Data/Scenes/Die.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.12549, 0.0784314, 0.533333 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Die" type="Control"]
margin_right = 76.0
margin_bottom = 70.0
rect_min_size = Vector2( 76, 70 )
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 5
script = ExtResource( 2 )

[node name="Die" type="Button" parent="."]
unique_name_in_owner = true
margin_right = 76.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 38, 35 )
mouse_default_cursor_shape = 2
toggle_mode = true
shortcut_in_tooltip = false
icon = ExtResource( 1 )
flat = true
icon_align = 1

[node name="RollTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="RotationTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="SelectedRect" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[connection signal="toggled" from="Die" to="." method="_on_Die_toggled"]
[connection signal="timeout" from="RollTimer" to="." method="_on_RollTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="RotationTimer" to="." method="_on_RotationTimer_timeout"]
